# ocs2_ros2

./: .gitignore  .gitmodules  README.md
advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/: CMakeLists.txt  package.xml
advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/launch/: ballbot_mpcnet.launch.py
advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/ocs2_ballbot_mpcnet/: mpcnet.py
advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/policy/: ballbot.onnx  ballbot.pt
advance examples/ocs2_mpcnet/ocs2_ballbot_mpcnet/src/: BallbotMpcnetDefinition.cpp  BallbotMpcnetDummyNode.cpp  BallbotMpcnetInterface.cpp
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/: CMakeLists.txt  package.xml
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/launch/: default.launch.py  raisim.launch.py
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/ocs2_legged_robot_mpcnet/: mpcnet.py  train.py
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/policy/: init_policy.pt  raisim.onnx  without_raisim.onnx  without_raisim.pt
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/src/: LeggedRobotMpcnetDefinition.cpp  LeggedRobotMpcnetInterface.cpp  MpcnetDummy.cpp
advance examples/ocs2_mpcnet/ocs2_mpcnet_core/: CMakeLists.txt  package.xml  requirements.txt
advance examples/ocs2_mpcnet/ocs2_mpcnet_core/ocs2_mpcnet_core/: helper.py  mpcnet.py
advance examples/ocs2_mpcnet/ocs2_mpcnet_core/src/: MpcnetInterfaceBase.cpp  MpcnetPybindings.cpp
advance examples/ocs2_perceptive_anymal/ocs2_anymal_commands/: CMakeLists.txt
advance examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/: CMakeLists.txt  README.md  readme.md
advance examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/launch/: perceptive_mpc_demo.launch.py
advance examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/src/: PerceptiveMpcDemo.cpp
advance examples/ocs2_perceptive_anymal/ocs2_anymal_models/: CMakeLists.txt  README.md
advance examples/ocs2_perceptive_anymal/ocs2_anymal_models/launch/: visualize.launch.py
advance examples/ocs2_perceptive_anymal/ocs2_anymal_models/urdf/: anymal_camel_rsl.urdf
basic examples/: README.md  readme.md
basic examples/ocs2_ballbot/: CMakeLists.txt  package.xml
basic examples/ocs2_ballbot/include/ocs2_ballbot/: BallbotInterface.h  BallbotParameters.h  BallbotPyBindings.h
basic examples/ocs2_ballbot/src/: BallbotInterface.cpp
basic examples/ocs2_ballbot/src/dynamics/: BallbotSystemDynamics.cpp
basic examples/ocs2_ballbot_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_ballbot_ros/include/ocs2_ballbot_ros/: BallbotDummyVisualization.h
basic examples/ocs2_ballbot_ros/launch/: ballbot_mpc_mrt.launch.py  ballbot_slp.launch.py
basic examples/ocs2_ballbot_ros/src/: BallbotDdpMpcNode.cpp  BallbotDummyVisualization.cpp  BallbotMpcMrtNode.cpp  BallbotSlpMpcNode.cpp  BallbotSqpMpcNode.cpp  BallbotTargetPoseCommand.cpp  DummyBallbotNode.cpp
basic examples/ocs2_ballbot_ros/test/: ballbotIntegrationTest.cpp
basic examples/ocs2_cartpole/: CMakeLists.txt  package.xml
basic examples/ocs2_cartpole/include/ocs2_cartpole/: CartPoleInterface.h  CartPoleParameters.h  definitions.h
basic examples/ocs2_cartpole/src/: CartPoleInterface.cpp
basic examples/ocs2_cartpole/test/: testCartpole.cpp
basic examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_cartpole_ros/include/ocs2_cartpole_ros/: CartpoleDummyVisualization.h
basic examples/ocs2_cartpole_ros/rviz/: cartpole.rviz
basic examples/ocs2_cartpole_ros/src/: CartpoleDummyVisualization.cpp  CartpoleMpcNode.cpp  DummyCartpoleNode.cpp
basic examples/ocs2_double_integrator/: CMakeLists.txt  package.xml
basic examples/ocs2_double_integrator/include/ocs2_double_integrator/: DoubleIntegratorInterface.h  DoubleIntegratorPyBindings.h  definitions.h
basic examples/ocs2_double_integrator/src/: DoubleIntegratorInterface.cpp
basic examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_double_integrator_ros/include/ocs2_double_integrator_ros/: DoubleIntegratorDummyVisualization.h
basic examples/ocs2_double_integrator_ros/launch/: double_integrator.launch.py  visualize.launch.py
basic examples/ocs2_double_integrator_ros/src/: DoubleIntegratorDummyVisualization.cpp  DoubleIntegratorMpcNode.cpp  DoubleIntegratorTargetPoseCommand.cpp  DummyDoubleIntegratorNode.cpp
basic examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
basic examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_mobile_manipulator_ros/launch/include/: mobile_manipulator_distance.launch.py
basic examples/ocs2_mobile_manipulator_ros/src/: MobileManipulatorTarget.cpp
basic examples/ocs2_quadrotor/: CMakeLists.txt  package.xml
basic examples/ocs2_quadrotor/src/: QuadrotorInterface.cpp
basic examples/ocs2_quadrotor_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_quadrotor_ros/src/: DummyQuadrotorNode.cpp  QuadrotorTargetPoseCommand.cpp
mpc/ocs2_qp_solver/: CMakeLists.txt
ocs2/: package.xml  (+1 more)
ocs2_mpc/: CMakeLists.txt
ocs2_python_interface/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole_ros/launch/: cartpole.launch.py
ocs2_robotic_examples/ocs2_mobile_manipulator/: CMakeLists.txt
ocs2_robotic_examples/ocs2_quadrotor/: CMakeLists.txt
ocs2_robotic_examples/ocs2_quadrotor/src/: QuadrotorSystemDynamics.cpp
ocs2_robotic_examples/ocs2_quadrotor_ros/: CMakeLists.txt
ocs2_robotic_examples/ocs2_quadrotor_ros/launch/: quadrotor.launch.py
ocs2_robotic_examples/ocs2_quadrotor_ros/rviz/: quadrotor.rviz
ocs2_robotic_examples/ocs2_quadrotor_ros/src/: QuadrotorDummyVisualization.cpp  QuadrotorMpcNode.cpp
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/src/: SqpSolver.cpp
robotics/ocs2_python_interface/: CMakeLists.txt
robotics/ocs2_python_interface/src/: PythonInterface.cpp
robotics/ocs2_python_interface/test/: testDummyPyBindings.cpp
robotics/ocs2_robotic_tools/: CMakeLists.txt  package.xml
(+331 files in other folders)
