<?xml version="1.0"?>
<package format="2">
    <name>ocs2_ballbot_ros</name>
    <version>0.0.0</version>
    <description>The ocs2_ballbot_ros package</description>

    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <depend>ament_index_cpp</depend>

    <depend>tf2</depend>
    <depend>urdf</depend>
    <depend>kdl_parser</depend>
    <depend>robot_state_publisher</depend>
    <depend>visualization_msgs</depend>

    <depend>ocs2_ros_interfaces</depend>
    <depend>ocs2_ballbot</depend>
    <depend>ocs2_robotic_assets</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
