<?xml version="1.0"?>
<package format="2">
    <name>ocs2_mobile_manipulator_ros</name>
    <version>0.0.0</version>
    <description>The ocs2_mobile_manipulator_ros package</description>

    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
    <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
    <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

    <license>BSD3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>tf2</depend>
    <depend>urdf</depend>
    <depend>kdl_parser</depend>
    <depend>robot_state_publisher</depend>
    <depend>ocs2_self_collision_visualization</depend>
    <depend>ocs2_mobile_manipulator</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
