<?xml version="1.0"?>
<package format="2">
    <name>ocs2_quadrotor</name>
    <version>0.0.0</version>
    <description>The ocs2_quadrotor package</description>

    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>ament_index_python</exec_depend>

    <depend>ocs2_ddp</depend>
    <depend>ocs2_robotic_assets</depend>
    <depend>ocs2_python_interface</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
